# MechBench

./: .gitignore  MechanismBench_BlogPost.md  MechanismBench_Codebase.md  MechanismBench_Plan.md  README.md  mechanismbench_v0_revised_build_plan.md  mechbench.yaml  pyproject.toml
agents/: __init__.py  backends.py  base.py  llm_scaffold.py  naive.py  oracle.py  random_policy.py  scripted_causal_control.py
analysis/: __init__.py  reporting.py
docs/: contributing_agents.md  contributing_worlds.md  design_decisions.md  phase4_study.md  scoring_details.md
families/_template/: family.py  family.yaml
families/attn_branch/: family.py  family.yaml  phase2_certified_suite.md
families/fixture/: family.yaml
families/simulator/: family.py  family.yaml
mechbench/: __init__.py  cli.py  registry.py
mechbench/core/: __init__.py  budget.py  episode.py  evidence_ledger.py  family.py  (+2 more)
results/: simulator_calibration.json  simulator_calibration_report.md
scripts/: evaluate.py  verify_world.py
study_packs/: phase4_budget_pilot.json  phase4_core_lab.json  phase4_free_smoke.json  phase4_frontier_template.json  phase4_full_simulator_frontier.json
tests/: test_attn_branch_vertical_slice.py  test_backends.py  test_budget_ledger_workspace.py  test_llm_scaffold_agent.py  test_phase4_study.py  test_registry_and_episode.py  test_reporting.py  test_scoring.py  test_simulator_compiler_calibration.py  test_simulator_compute_laundering.py  test_simulator_norm_laundering.py  test_simulator_parameter_laundering.py  test_simulator_seed_hacking.py  test_simulator_true_mechanism.py
(+162 files in other folders)
